
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ debug_write ;
 int printf (char*,char*) ;
 int strlen (char*) ;
 int write (int,char*,int ) ;

int write_sock(int fd, char *buf)
{
    if(debug_write)
  printf(" > %s", buf);

    return write(fd, buf, strlen(buf));
}
